src/objects/AcctSeed__Accounting_Period__c.object
<CustomObject>
    <description>Used to capture all the financial activity that occurs during a specified time period. Accounting periods are typically defined to coincide with a calendar year month.</description>
    <fields>
        <fullName>AcctSeed__End_Date__c</fullName>
        <inlineHelpText>Accounting periods are typically used as months. This denotes the end of the period. Fiscal Months are supported. A period end date can not cross over into the start and end date range of another period.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Start_Date__c</fullName>
        <inlineHelpText>Accounting periods are typically used as months. This denotes the beginning of the period. Fiscal Months are supported. A period beginning date can not cross over into the start and end date range of another period.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>&quot;Open&quot; allows new transactions to be saved to this period. &quot;Closed&quot; prevents new records from being saved to this period.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accounting  Period</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Start_Date__c</columns>
        <columns>AcctSeed__End_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Closed</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Start_Date__c</columns>
        <columns>AcctSeed__End_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Open</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Start_Date__c</columns>
        <columns>AcctSeed__End_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Accounting Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Period_between_1_and_12</fullName>
        <active>false</active>
        <description>The Accounting Period must be a numerical value between 1 and 12.</description>
        <errorConditionFormula>OR(VALUE(RIGHT(Name, 2))&gt;12, VALUE(RIGHT(Name, 2))&lt;1)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Accounting Period must be a numerical value between 1 and 12.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Start_Date_Not_Greater_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AcctSeed__Start_Date__c &gt; AcctSeed__End_Date__c</errorConditionFormula>
        <errorMessage>The start date cannot be greater than the end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__YYYY_MM_Format</fullName>
        <active>false</active>
        <description>Accounting Periods must be in numerical format YYYY-MM</description>
        <errorConditionFormula>ISBLANK(Name) || !(REGEX(Name, &quot;^(1|2)[0-9]{3}-(0[1-9]|1[012])$&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Accounting Periods must be in the format YYYY-MM and must be numerical values.</errorMessage>
    </validationRules>
</CustomObject>